[package]
authors = ["Adrodoc <adrodoc55@googlemail.com>"]
categories = ["api-bindings", "development-tools::debugging"]
description = "A Rust implementation of the Debug Adapter Protocol"
edition = "2021"
keywords = ["dap", "protocol", "debug"]
license = "MIT"
name = "debug-adapter-protocol"
repository = "https://github.com/vanilla-technologies/debug-adapter-protocol"
version = "0.1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
typed-builder = "0.10"
